# Carcinised-Gazette-Scraper

./: .env.example  Cargo.toml  Procfile  README.md  bacon.toml
src/: location_parser.rs  main.rs  test_location_parser.rs  web.rs
src/db/: core.rs  db.rs  mock.rs  mod.rs  redis.rs
src/geocoder/: azure.rs  core.rs  geocoder.rs  geoposition.rs  google.rs  mock.rs  mod.rs
src/image_service/: core.rs  mock.rs  mod.rs  s3.rs
src/location_parser/: core.rs  location_parser.rs  mock.rs  mod.rs  openai.rs
src/parser/: mod.rs  openai.rs  parser.rs
src/utils/: gazette.rs  geojson.rs  maptypes.rs  mod.rs  updater.rs
src/web/: core.rs  mod.rs  web.rs
src/web/js/: event-source.js  map-init.js  update-functions.js
src/web/styles/: main.css
src/web/templates/: base.rs  components.rs  mod.rs  styles.rs
