[package]
name = "rust-cow-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
futures = "0.3.31"
lopdf = "0.34.0"
maud = { version = "0.26.0", features = ["axum"] }
redis = {  version = "0.27.6", features = ["cluster", "tokio-native-tls-comp"] }
reqwest = "0.12.9"
select = "0.6.0"
sha1 = "0.10.6"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
imgurs = "0.11.2"
redis-macros = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }