[package]
name = "rust-cow-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
futures = "0.3.31"
lopdf = "0.36.0"
maud = { version = "0.27.0", features = ["axum"] }
redis = {  version = "0.32.3", features = ["cluster", "tokio-native-tls-comp"] }
reqwest = { version = "0.12.9", features = ["json"] }
select = "0.6.0"
sha1 = "0.10.6"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
imgurs = "0.11.2"
redis-macros = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
itertools = "0.14.0"
async-trait = "0.1.83"
anyhow = "1.0.98"
